# STC

./: .gitattributes  .gitignore  CMakeLists.txt  EXAMPLE.md  LICENSE  Makefile  README.md  advanced_example.c  advanced_example.md  autocheck.ll  benchmark.c  benchmark.cpp  build_autocheck.sh  buildcheck.sh  c_defs.h  c_hashmap.h  c_string.h  c_vector.h  cdef.h  cdefs.h  checkauto.ll  cmap.h  cmap_test.c  cstring.h  cvector.h  demos.c  meson.build  meson_build.sh  meson_options.txt  meson_release.sh  rngtest.c  test  words_dictionary.txt
benchmarks/: build_all.sh  cdeq_benchmark.cpp  clist_benchmark.cpp  cmap_benchmark.cpp  cmap_benchmark2.cpp  cmap_benchmark3.cpp  cpque_benchmark.cpp  crand_benchmark.cpp  crand_benchmark2.cpp  csmap_benchmark.cpp  csmap_benchmark2.cpp  cvec_benchmark.cpp  names.txt  picobench.hpp  plot.py  run_all.bat  run_clang.sh  run_gcc.sh  run_vc.bat  rust_cmap.c  rust_hashmap.rs  shootout1_cmap.cpp  shootout2_cmap.cpp  shootout3_csmap.cpp  shootout4_crand.cpp  shootout5_crand.cpp  shootout_hashmaps.cpp  string_bench.c  string_bench.cpp  vector_vs_deque.cpp
c_lib/: cdefs.h  cgetopt.h  cmap.h  cstring.h  cvec3.h  cvector.h
ccl/: cdefs.h  copt.h  cstring.h  cvec3.h  cvec4.h
clib/: benchmark.cpp  cdefs.h  cmap.h  cstring.h  cvector.h
dev/: csmap.c
docs/: algorithm_api.md  arc_api.md  box_api.md  carc_api.md  carray_api.md  cbits_api.md  cbitset_api.md  cbox_api.md  ccommon_api.md  cdeq_api.md  clist_api.md  cmap_api.md  copt_api.md  coption_api.md  coroutine_api.md  cpque_api.md  cpqueue_api.md  cptr_api.md  cqueue_api.md  crand_api.md  crandom_api.md  crawstr_api.md  cregex_api.md  cset_api.md  csmap_api.md  cspan_api.md  csptr_api.md  csset_api.md  cstack_api.md  cstr_api.md  csubstr_api.md  csview_api.md  cvec_api.md  czview_api.md  deq_api.md  deque_api.md  hmap_api.md  hset_api.md  list_api.md  pque_api.md  (+9 more)
examples/: CMakeLists.txt  README.md  advanced.c  arc_containers.c  arc_demo.c  arcvec_erase.c  astar.c  benchmark.c  benchmark.cpp  birthday.c  bits.c  bits2.c  books.c  box.c  box2.c  cbits_prime.c  city.c  complex.c  convert.c  cpque.c  crandom_ex.c  csmap_erase.c  csmap_ex.c  csmap_ex2.c  csmap_find.c  csmap_insert.c  csmap_v1.h  csset_erase.c  cstr_match.c  demos.c  ex_gauss1.c  ex_gauss2.c  ex_gaussian.c  forfilter.c  forfiltered.c  forloops.c  gauss1.c  gauss2.c  geek1.c  geek2.c  (+77 more)
examples/algorithms/: event.c  filterdemos.c  forloops.c  meson.build  random.c  shape.c  shape.cpp  tree.c  tree_rc.c
examples/bitsets/: bits.c  bits2.c  meson.build  prime.c
examples/coroutines/: channels.c  cointerleave.c  coread.c  corotree.c  coroutine_tasks.c  coroutines.c  coroutines1.c  coroutines2.c  coroutines3.c  dining_philosophers.c  error_handling.c  fibonacci.c  filetask.c  generator.c  launch.c  meson.build  neco.c  nested_awaits.c  producer.c  producer_task.c  scheduler.c  triples.c  waitgroup.c
examples/hashmaps/: birthday.c  books.c  hashmap.c  mapmap.c  meson.build  new_map.c  phonebook.c  unordered_set.c  vikings.c
examples/linkedlists/: intrusive.c  list_erase.c  list_splice.c  lists.c  meson.build  new_list.c
examples/mixed/: FMD.c  astar.c  aux_alloc.c  complex.c  convert.c  demos.c  inits.c  meson.build  myalloc.h  read.c
examples/others/: flat_hash_map.hpp  robin_hood.hpp
examples/others/sparsepp/: spp_dlalloc.h  spp_utils.h
examples/priorityqueues/: functor.c  meson.build  new_pqueue.c  priority.c
examples/queues/: meson.build  new_queue.c  queue.c
examples/regularexpressions/: meson.build  movies.c  multiline.c  regex1.c  regex2.c  regex_match.c  regex_replace.c
examples/smartpointers/: arc_containers.c  arc_demo.c  arcvec_erase.c  box.c  box2.c  map_box.c  map_ptr.c  meson.build  music_arc.c  new_sptr.c  person_arc.c
examples/sortedmaps/: gauss2.c  listmap.c  mapmap.c  meson.build  multimap.c  new_smap.c  smap_erase.c  smap_find.c  smap_insert.c  sorted_map.c  sset_erase.c
examples/spans/: matmult.c  mdspan.c  meson.build  multidim.c  printspan.c  span_demo.c  submdspan.c
examples/strings/: cstr_match.c  meson.build  replace.c  splitstr.c  sso_map.c  sso_substr.c  sview_split.c  utf8replace_c.c  utf8replace_rs.rs
examples/vectors/: lower_bound.c  meson.build  new_vec.c  stack.c
glm/: mat3.h  mat4.h  quat.h  transform.h  vec3.h  vec4.h
include/: threads.h  unistd.h
misc/: meson.build
misc/examples/coroutines/: cointerleave.c  coread.c  coroutines.c  cotasks1.c  cotasks2.c  dining_philosophers.c  fibonacci.c  filetask.c  generator.c  meson.build  producer.c  producer_task.c  scheduler.c  triples.c
misc/examples/sortedmaps/: csmap_erase.c  csmap_find.c  csmap_insert.c  csset_erase.c  gauss2.c  listmap.c  mapmap.c  meson.build  multimap.c  new_smap.c  smap_erase.c  smap_find.c  smap_insert.c  sorted_map.c  sset_erase.c
misc/examples/strings/: cstr_match.c  meson.build  replace.c  splitstr.c  sso_map.c  sso_substr.c  sview_split.c  utf8replace_c.c
misc/tests/: algorithm_test.c  cregex_test.c  cspan_test.c  ctest.h  deq_test.c  deque_test.c  hmap_test.c  list_test.c  meson.build  mytests.c.txt  run.sh  smap_test.c  tests.sh  vec_test.c
others/: bytell_hash_map.h  khash.h  robin_hood.h
src/: casefold.c  casefold.py  checkauto.l  checkscoped.l  corestc.c  cregex.c  cregex_utf8.c  cspan.c  cstr_core.c  cstr_io.c  cstr_misc.c  cstr_u8.c  cstr_unicode.c  cstr_utf8.c  csview.c  fmt.c  libstc.c  libstcregex.c  random.c  singleheader.py  singleupdate.sh  stc_core.c  threads.c  utf8_misc.c  utf8_tab.py  utf8code.c  utf8tabs.c  utf8tabs.h  utf8tabs.inc  utf8tabs.py
stc/: carr.h  carray.h  cbits.h  cbitset.h  cbitvec.h  ccommon.h  cdefs.h  cdeq.h  cflist.h  cfmt.h  cfwdlist.h  chash.h  clist.h  cmap.h  cmat3.h  cmat4.h  copt.h  coptget.h  coption.h  cpque.h  cpqueue.h  cprique.h  cptr.h  cquat.h  cqueue.h  crand.h  crandom.h  (+18 more)
tests/: CMakeLists.txt  algorithm_test.c  cregex_test.c  cspan_test.c  ctest.h  deque_test.c  hmap_test.c  list_test.c  meson.build  run.sh  smap_test.c  test_new_arr.c  test_new_deq.c  test_new_list.c  test_new_pque.c  test_new_queue.c  test_new_smap.c  utf8_test.c  vec_test.c
(+397 files in other folders)
